--- a/bot/src/main/resources/application.yaml
+++ b/bot/src/main/resources/application.yaml
@@ -1,5 +1,6 @@
 app:
   telegram-token: ${TELEGRAM_TOKEN} # env variable
+  scrapper-api-base: http://localhost:8081
 
 spring:
   application:
@@ -10,6 +11,13 @@ spring:
     hibernate:
       ddl-auto: validate
     open-in-view: false
+
+logging:
+  structured:
+    format:
+      file: ecs
+  file:
+    name: bot-log.json
 
 server:
   port: 8080
